Added bit about community to TODO

--- a/TODO
+++ b/TODO
@@ -25,6 +25,11 @@ Server stuff
  - Add varnish
  - Add memcached
 
+Community stuff
+---------------
+
+ - Add a way for someone to submit a layer -- i.e., geography + reps
+
 Permalinks
 ----------
 
